fix: shifted style

--- a/Components/Navigation/navigation.css
+++ b/Components/Navigation/navigation.css
@@ -1,12 +1,5 @@
 @import url("../../Styles/utility.css");
 
-.feat-nav {
-  min-height: 100px;
-  background-color: var(--stack-li);
-  border: 1px solid var(--secondary-action);
-  padding: 1rem 0.5rem;
-}
-
 .navbar {
   min-height: 46px;
   max-height: 72px;
@@ -28,7 +21,6 @@
 .nav-links li a {
   color: black;
   text-decoration: none;
-  margin: 0 0.5rem;
   padding: 0.4rem 0.5rem;
 }
 
